# ScopeForge

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.bat  docker-compose.yml  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: analysis_service.py  auth.py  auth_rate_limit.py  billing.py  captcha.py  config.py  db.py  email.py  main.py  mock.py  models.py  prompt.py  provider.py  rate_limit.py  repository.py  schemas.py  usage.py
apps/api/app/prompts/: system.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_analyses.py  0002_create_analysis_events.py  0003_create_auth_and_billing.py  0004_widen_event_type_and_cancel_at_period_end.py  0005_email_verification.py  0006_password_reset.py
apps/api/tests/: conftest.py  test_analyses.py  test_auth.py  test_billing.py  test_crud.py  test_diagnostics_and_rate_limit.py  test_email.py  test_health.py  test_security.py
apps/web/: eslint.config.mjs  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/analyze/: page.tsx
apps/web/src/app/billing/: page.tsx
apps/web/src/app/design-system/: page.tsx
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/fonts/: index.ts
apps/web/src/lib/: analysis-store.ts  api.ts  auth-store.tsx  cn.ts  concepts.ts  constants.ts  export.ts  format.ts  history-fixtures.ts  history-store.ts  installation.ts  local-store.ts  mock-analysis.ts  motion.ts  password-strength.ts  settings-store.ts  use-count-up.ts  use-mounted.ts  use-reduced-motion.ts
apps/web/src/types/: analysis.ts  auth.ts  history.ts
scripts/: dev.mjs  doctor.mjs
(+55 files in other folders)
